Make cols eql height (but border-spacing issue)
border-spacing also applied to outer edges so cols not aligned with
header

--- a/ch03-box-model/style.css
+++ b/ch03-box-model/style.css
@@ -23,15 +23,21 @@ main {
   display: block;
 }
 
+.container {
+  display: table;
+  width: 100%;
+  border-spacing: 1.5em 0;
+}
+
 .main {
-  float: left;
+  display: table-cell;
   width: 70%;
   background-color: #fff;
   border-radius: .5em;
 }
 
 .sidebar {
-  float: left;
+  display: table-cell;
   width: calc(30% - 1.5em);
   margin-left: 1.5em;
   padding: 1.5em;
